submission/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend-deployment
    labels:
        app: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            app: frontend
    template:
        metadata:
            labels:
                app: frontend
        spec:
            containers:
                - name: frontend-container
                  image: jeandtx/frontend:submission
                  ports:
                      - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: frontend-service
    labels:
        app: frontend
spec:
    selector:
        app: frontend
    type: ClusterIP
    ports:
        - protocol: TCP
          port: 80
          targetPort: 80
