submission/api-gateway.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
    labels:
        app: api-gateway
spec:
    replicas: 2
    selector:
        matchLabels:
            app: api-gateway
    template:
        metadata:
            labels:
                app: api-gateway
        spec:
            containers:
                - name: api-gateway
                  image: jeandtx/api-gateway:submission
                  ports:
                      - containerPort: 8080
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 8080
                      initialDelaySeconds: 15
                      timeoutSeconds: 1
                      periodSeconds: 10
                      failureThreshold: 30

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: api-gateway-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
              paths:
                  - path: /api/(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: api-gateway
                            port:
                                number: 80
---
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
spec:
    selector:
        app: api-gateway
    ports:
        - protocol: TCP
          port: 80
          targetPort: 8080
    type: ClusterIP
---
