submission/feedback-api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: feedback-api
    namespace: default
spec:
    replicas: 2
    selector:
        matchLabels:
            app: feedback-api
    template:
        metadata:
            labels:
                app: feedback-api
        spec:
            containers:
                - name: feedback-container
                  image: jeandtx/feedback-api:submission
                  ports:
                      - containerPort: 80
                  livenessProbe:
                      httpGet:
                          path: /health
                          port: 80
                      initialDelaySeconds: 15
                      timeoutSeconds: 1
                      periodSeconds: 10
                      failureThreshold: 30
                  volumeMounts:
                      - name: sqlite-storage
                        mountPath: /usr/db
            volumes:
                - name: sqlite-storage
                  persistentVolumeClaim:
                      claimName: sqlite-pvc
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: feedback-api-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
    rules:
        - http:
              paths:
                  - path: /admin/(.*)
                    pathType: ImplementationSpecific
                    backend:
                        service:
                            name: feedback-service
                            port:
                                number: 9000
---
apiVersion: v1
kind: Service
metadata:
    name: feedback-service
    namespace: default
spec:
    selector:
        app: feedback-api
    ports:
        - protocol: TCP
          port: 9000
          targetPort: 80
    type: ClusterIP
