submission/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: frontend-ingress
    annotations:
        kubernetes.io/ingress.class: "nginx"
spec:
    tls:
        - hosts:
              - localhost
          secretName: frontend-tls
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: frontend-service
                            port:
                                number: 80
---
# apiVersion: v1
# kind: Secret
# metadata:
#     name: frontend-tls
# data: 
#     tls.crt: base64 encoded cert
#     tls.key: base64 encoded key
# type: kubernetes.io/tls
